@@ -1,5 +1,6 @@
-; $Id: aggregator.info,v 1.3 2006/11/21 20:55:33 dries Exp $
+; $Id: aggregator.info,v 1.4 2007/06/08 05:50:53 dries Exp $
 name = Aggregator
 description = "Aggregates syndicated content (RSS, RDF, and Atom feeds)."
 package = Core - optional
 version = VERSION
+core = 6.x
