@@ -1,5 +1,6 @@
-; $Id: drupal.info,v 1.3 2006/11/21 20:55:34 dries Exp $
+; $Id: drupal.info,v 1.4 2007/06/08 05:50:54 dries Exp $
 name = Drupal
 description = Lets you register your site with a central server and improve ranking of Drupal projects by posting information on your installed modules and themes; also enables users to log in using a Drupal ID.
 package = Core - optional
 version = VERSION
+core = 6.x
