@@ -1,5 +1,6 @@
-; $Id: help.info,v 1.3 2006/11/21 20:55:34 dries Exp $
+; $Id: help.info,v 1.4 2007/06/08 05:50:54 dries Exp $
 name = Help
 description = Manages the display of online help.
 package = Core - optional
 version = VERSION
+core = 6.x
