@@ -1,5 +1,6 @@
-; $Id: locale.info,v 1.4 2007/05/03 09:51:08 dries Exp $
+; $Id: locale.info,v 1.5 2007/06/08 05:50:55 dries Exp $
 name = Locale
 description = Add language handling functionality and enables the translation of the user interface to languages other than English.
 package = Core - optional
 version = VERSION
+core = 6.x
