@@ -1,5 +1,6 @@
-; $Id: node.info,v 1.3 2006/11/21 20:55:34 dries Exp $
+; $Id: node.info,v 1.4 2007/06/08 05:50:55 dries Exp $
 name = Node
 description = Allows content to be submitted to the site and displayed on pages.
 package = Core - required
 version = VERSION
+core = 6.x
