@@ -1,5 +1,6 @@
-; $Id: php.info,v 1.1 2007/04/24 10:54:34 dries Exp $
+; $Id: php.info,v 1.2 2007/06/08 05:50:55 dries Exp $
 name = PHP filter
 description = Allows embedded PHP code/snippets to be evaluated.
 package = Core - optional
 version = VERSION
+core = 6.x
