@@ -1,5 +1,6 @@
-; $Id: ping.info,v 1.3 2006/11/21 20:55:35 dries Exp $
+; $Id: ping.info,v 1.4 2007/06/08 05:50:55 dries Exp $
 name = Ping
 description = Alerts other sites when your site has been updated.
 package = Core - optional
 version = VERSION
+core = 6.x
