@@ -1,5 +1,6 @@
-; $Id: profile.info,v 1.3 2006/11/21 20:55:35 dries Exp $
+; $Id: profile.info,v 1.4 2007/06/08 05:50:55 dries Exp $
 name = Profile
 description = Supports configurable user profiles.
 package = Core - optional
 version = VERSION
+core = 6.x
