@@ -1,5 +1,6 @@
-; $Id: statistics.info,v 1.3 2006/11/21 20:55:35 dries Exp $
+; $Id: statistics.info,v 1.4 2007/06/08 05:50:56 dries Exp $
 name = Statistics
 description = Logs access statistics for your site.
 package = Core - optional
 version = VERSION
+core = 6.x
