@@ -1,5 +1,6 @@
-; $Id: system.info,v 1.3 2006/11/21 20:55:35 dries Exp $
+; $Id: system.info,v 1.4 2007/06/08 05:50:56 dries Exp $
 name = System
 description = Handles general site configuration for administrators.
 package = Core - required
 version = VERSION
+core = 6.x
