@@ -1,5 +1,6 @@
-; $Id: tracker.info,v 1.3 2006/11/21 20:55:35 dries Exp $
+; $Id: tracker.info,v 1.4 2007/06/08 05:50:57 dries Exp $
 name = Tracker
 description = Enables tracking of recent posts for users.
 package = Core - optional
 version = VERSION
+core = 6.x
