@@ -1,5 +1,6 @@
-; $Id: upload.info,v 1.3 2006/11/21 20:55:35 dries Exp $
+; $Id: upload.info,v 1.4 2007/06/08 05:50:57 dries Exp $
 name = Upload
 description = Allows users to upload and attach files to content.
 package = Core - optional
 version = VERSION
+core = 6.x
